# esp32-http-spiffs-proj

./: .gitignore  CMakeLists.txt  faq.txt  formatData  partitions.csv  sdkconfig.defaults  sdkconfig.defaults_uart  sdkconfig.defaults_udp  template_satellite_shedule.txt
main/: CMakeLists.txt  Kconfig.projbuild  button.c  button.h  certificate.pem  command_handler.c  command_handler.h  freertos_handler.c  freertos_handler.h  httpClient.c  httpClient.h  httpClient_example.c  httpClient_example.h  http_client.c  http_client.h  main.c  main.h  nvs.c  nvs.h  options.h  satellite_data_parser.c  satellite_data_parser.h  spiffsStorage.c  spiffsStorage.h  spiffs_storage.c  spiffs_storage.h  time_converter.c  time_converter.h  uart.c  uart.h  udp.c  udp.h  wifi.c  wifi.h  wifi_example.c  wifi_example.h
spiffs_image/: 2023-091t.txt  cstp-1.1.txt  cstp-1.2.txt  data.txt  fees.txt  fossasat2e13.txt  jilin-01_gaofen_2f.txt  mdqubesat-2.txt  polytech_un.txt  polytech_universe-3.txt  rs52sb.txt  rs52sd.txt  rs52se.txt  rs52sg.txt  rs52sv.txt  tianqi-7.txt
